<?xml version='1.0' encoding='UTF-8'?>
<resources>
	<string name="facebook_app_id">1583420058547606</string>
    
    <string name="app_name">Virtual Hotel Agent</string>
    <string name="lots_of_text">          Hotel Rating and Reviews powered by TripAdvisor.\n
		  Hotel Search and booking by Expedia.\n
		  Text parsing by Evature.\n</string>
    <string name="ok_button">OK, got it.</string>
    <string name="_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="fatal_error">Fatal Error</string>
    <string name="microphone_button">Microphone button</string>
    <string name="chat_icon_description">chat icon</string>
    <string name="network_error">This application requires internet connection in order to function - Sorry!</string>
    <string name="redirected">Couldn\'t connect to EAN API network.</string>
    <string name="error_tts_init">Could not initialize text-to-speech</string>
    <string name="CHAT">CHAT</string>
    <string name="HOTELS">HOTELS</string>
    <string name="HOTEL">HOTEL</string>
    <string name="button_stop">Stop</string>
    <string name="people_per_room">Adults per room:</string>
    <!-- <string name="EXAMPLES">EXAMPLES</string> -->
    <string name="hotel_image">Hotel Image</string>
    <string name="per_night">/night</string>
    <string name="trip_advisor_icon">Trip Advisor Icon</string>
    <string name="settings">Settings</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="about">About</string>
    <string name="bugreport_dialog_text">Please leave a comment describing what went wrong.</string>
    <string name="bugreport_dialog_title">Bug Report</string>
    <string name="bugreport_dialog_comment_prompt">Comment:</string>
    <string name="currency_pref_title">Default Currency</string>
    <string name="internalization_title">Internalization</string>
    <string name="currency_summary">Show results using this currency</string>
    <string name="no_rooms">There are no rooms available for the selected dates.</string>
    <string name="room_price_disclaimer">The room rates listed are for double occupancy per room unless 
        otherwise stated and exclude tax recovery charges and service fees. See <a href="http://www.travelnow.com/templates/352395/faq#9">FAQs</a> for more details.</string>
    <string name="room_price_disclaimer_hotel_collect">        This hotel can be booked online only.
        This hotel is a non-discounted property. All rates displayed are nightly, and based on double occupancy per room 
        unless otherwise specified. Some rates may require special identification. Our booking  fee, taxes, and other surcharges 
        imposed by the hotel are not included. Any extra adults or children above the room\'s listed occupancy may be subject to 
        additional charges at the property\'s discretion.</string>
    <string name="faq">FAQ</string>
    <string name="children_per_room_">Children per room (3 max):</string>
    <string name="guest_num">Number of Guests in room:</string>
    <string name="greeting">Hello, I am your hotel agent.\nYou can tell me what you would like to find using voice.</string>
    <string name="examples_greetings">You can try me by tapping on the microphone and saying any of these examples:</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_image_gallery">ImageGalleryActivity</string>
    <string name="room_photo">Room Photo</string>
    <string name="arrival">Check in:</string>
    <string name="departure">Check out:</string>
    <string name="guests">Guests:</string>
    <string name="room_type">Room Type:</string>
    <string name="bed_type">Bed Type:</string>
    <string name="price_details">Price Details</string>
    <string name="total_charges">Total Charges</string>
    <string name="security_notice_title">Secure Booking</string>
    <string name="security_notice_text">We keep all your personal information secure and encrypted.\nWe won\'t share or
        sell your personal information.</string>
    <string name="guest_information">Guest Information:</string>
    <string name="guest_first_name">First Name</string>
    <string name="guest_last_name">Last Name</string>
    <string name="guest_phone">Phone</string>
    <string name="guest_email">Email for Confirmation</string>
    <string name="billing_information">Billing Information:</string>
    <string name="billing_address_1">Address Line 1</string>
    <string name="billing_address_2">Address Line 2</string>
    <string name="billing_city">City</string>
    <string name="billing_state">State</string>
    <string name="billing_country">Country</string>
    <string name="billing_zip">Zip</string>
    <string name="billing_cc_num">Credit Card Num</string>
    <string name="billing_cc_expmo">MM</string>
    <string name="billing_cc_expyr">YY</string>
    <string name="billing_cc_security">Security Code (See back of credit card):</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="load_default_billing_info">Load Default Billing Info</string>
    <string name="itinerary_id">Itinerary ID</string>
    <string name="confirmation_numbers">Confirmation Numbers</string>
    <string name="checkin_instructions">Check-In Instructions</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="departure_date">Departure Date</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="taxes_and_fees">Taxes &amp; Fees</string>
    <string name="choose_contact">Choose from contacts</string>
    <string name="select">Select this Hotel</string>
    <string name="sold_out">Sold Out</string>
    <string name="no_hotels">No hotels available, please try searching for a different location or date</string>
    <string name="children_ages_required">Children ages are required for searching hotels</string>
    <string name="guests_info_button">Guests Info</string>
    <string name="billing_info_button">Billing Info</string>
    <string name="room_description">Room Description</string>
    <string name="credit_card_type_">Credit card type:</string>
    <string name="delete_utterance_button">Delete button</string>
    <string name="audio_control">Audio Control</string>
    <string name="low_volume_warning">Our experience shows that users with low volume settings do not notice when the they are being asked a question by the Virtual Hotel Agent, eg. being asked about missing stay duration or about missing check in date.</string>
    <string name="low_volume_header">Your volume is too low!</string>
    <string name="volume_">Volume:</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="new_session">New Session</string>
    <string name="title_hotel_detail">Hotel Detail</string>

    <string name="flat_microphone_bottom">
        m62.12539,256.83356l-0.12537,0.03183c0.12537,0.15363 57.65971,0.28244 135.50031,0.31897c1.62949,0.00021 3.25903,0.00116 4.76317,0.00211c7.39549,0.00467 12.66011,0.01614 15.16704,0.02997l0,0.13745c0,0.02554 11.15588,0.04614 25.06947,0.04614l0.12531,0c13.91353,0 24.94417,-0.0206 24.94417,-0.04614l0,-0.1377c2.5069,-0.01382 7.64612,-0.02505 15.04156,-0.02972c1.50424,-0.00095 3.13373,-0.00189 4.88855,-0.00211c77.84061,-0.03653 135.50031,-0.16534 135.50031,-0.31897l0,-0.03183c0,-0.02435 -11.15588,-0.04428 -24.44266,-0.04428c-13.2868,0 -24.44272,0.01968 -24.44272,0.04428l0,0.03183c0,0.06674 -14.41495,0.12671 -38.3562,0.1705c-24.06671,0.04355 -56.78232,0.07071 -93.38376,0.07071c-36.60135,0 -69.0663,-0.02692 -93.00761,-0.07071c-23.94128,-0.04379 -38.48158,-0.10397 -38.48158,-0.1705l0,-0.03183c0,-0.02435 -11.03054,-0.04428 -24.4427,-0.04428c-13.28681,0 -24.31738,0.01993 -24.31738,0.04428l0.00009,0z
    </string>
    <string name="flat_microphone_top">
 		m221.15625,257.17685l0,0.24097c0,0.07004 9.26965,0.12683 20.70313,0.12683c11.43347,0 20.70313,-0.05679 20.70313,-0.12683l0,-0.24097c0,-0.07004 -9.26965,-0.12683 -20.70313,-0.12683c-11.43347,0 -20.70313,0.05679 -20.70313,0.12683z
    </string>
    <string name="microphone_top">
         m186.15625,122.99933l0,115.87456c0,33.68257 24.94063,60.99934 55.70313,60.99934c30.76251,0 55.70313,-27.31677 55.70313,-60.99934l0,-115.87456c0,-33.68259 -24.94061,-60.99933 -55.70313,-60.99933c-30.7625,0 -55.70313,27.31674 -55.70313,60.99933z
    </string>
    <string name="microphone_bottom">
        m138.07188,228.07613l-0.07188,10.95894c0.07188,52.86069 33.0625,97.1799 77.69687,109.75043c0.93436,0.0806 1.86874,0.40289 2.73123,0.72522c4.24063,1.6116 7.25938,5.56006 8.69688,10.3143l0,47.30066c0,8.78326 6.39687,15.87433 14.375,15.87433l0.07187,0c7.97812,0 14.30315,-7.09106 14.30315,-15.87433l0,-47.38126c1.43747,-4.75421 4.38434,-8.62207 8.62497,-10.23367c0.86252,-0.32233 1.79691,-0.64465 2.80313,-0.72522c44.63437,-12.57056 77.69687,-56.88977 77.69687,-109.75047l0,-10.95892c0,-8.38037 -6.39688,-15.22969 -14.01563,-15.22969c-7.61874,0 -14.01563,6.76875 -14.01563,15.22969l0,10.95892c0,22.96541 -8.26563,43.59398 -21.99374,58.66249c-13.79999,14.98798 -32.55939,24.3353 -53.54689,24.3353c-20.98749,0 -39.60312,-9.26675 -53.33124,-24.3353c-13.72812,-15.06851 -22.06563,-35.77765 -22.06563,-58.66249l0,-10.95892c0,-8.38037 -6.325,-15.22969 -14.01563,-15.22969c-7.61874,0 -13.94376,6.84932 -13.94376,15.22969l0.00005,0z
    </string>
</resources>