<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/restart_button"
        android:title="New Session"
        android:icon="@drawable/session_restart"
        android:showAsAction="always">
    </item>
      
    
    <item
        android:id="@+id/audio"
        android:title="@string/audio_control"
        android:icon="@drawable/speaker_icon"
        android:showAsAction="ifRoom">
    </item>
    
    
    
<!--     <item -->
<!--         android:id="@+id/tutorial" -->
<!--         android:title="@string/tutorial"> -->
<!--     </item> -->
    
    <item
        android:id="@+id/faq"
        android:title="@string/faq">
    </item>
    
    <item
        android:id="@+id/settings"
        android:title="@string/settings">
    </item>
    
    <item
        android:id="@+id/bug_report"
        
        android:title="@string/report_a_bug">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about">
    </item>

</menu>